# comms-physical-layer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  gmsk_prototype.py
cpp_implementation/: CMakeLists.txt
cpp_implementation/inc/: BCHDecoder.hpp  ConvolutionalEncoder.hpp  PositionRowsEsoteric.hpp  RowsParityBitsEsoteric.hpp  etl_profile.h  gmsk.h  ldpc.hpp  oqpsk.h
cpp_implementation/inc/FreeRTOSTasks/: Task.hpp
cpp_implementation/lib/FreeRTOS/Source/include/: task.h
cpp_implementation/src/: BCHDecoder.cpp  filter.cpp  fm.cpp  gmsk.cpp  ldpc.cpp  main.cpp  oqpsk.cpp
cpp_implementation/test/: gmskTest.cpp  iqPlot.py  oqpskTest.cpp  oqpskTest.grc
cpp_implementation/test/iofiles/: ber.txt  iqFileGMSK.txt  iqOQPSKrand.txt
cpp_implementation/tests/: exampleTest.cpp  gmskTest.cpp  iqPlot.py
gauss-taps/: gauss_taps.py
inc/: BCHDecoder.hpp  Channel.h  ConvolutionalEncoder.hpp  FMTranscoder.hpp  GMSKFilterTaps.hpp  GMSKTranscoder.hpp  LDPCEncoder.hpp  OQPSKTranscoder.hpp  PositionRowsEsoteric.hpp  RowsParityBitsEsoteric.hpp  Synchronizer.hpp  fft.hpp  filter.h  filter.hpp  fm.h  gmsk.h  oqpsk.h
mcu_implementation/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  mcu_implementation.ioc
mcu_implementation/Core/Inc/: main.h  oqpsk.hpp
mcu_implementation/Core/Src/: main.c  main.cpp  oqpsk.cpp
mcu_implementation/Drivers/CMSIS/Include/: core_cm4.h
octave_prototypes/: analog_fm_in.m  analog_fm_mod.m  coarse_sync_ber.m  coefficients.m  find_preamble.m  gmsk.m  gmsk_demod.m  gmsk_est_freq_offset.m  gmsk_init.m  gmsk_mod.m  gmsk_rx.m  gmsk_test.m  gmsk_tx.m  octave-workspace  oqpsk.m  oqpsk_init.m  oqpsk_mod.m  oqpsk_test.m  plot_spectrum.m  prototype.m  qpsk_mod.m  rootraisedcos.m  rrc.m  run_gmsk_curves.m  run_gmsk_single.m  run_gmsk_test.m  run_oqpsk_single.m  run_test_channel_impairments.m  test.m
scripts/: gauss_taps.py  gmsk_detector.py
src/: BCHDecoder.cpp  Channel.cpp  ConvolutionalEncoder.cpp  FMTranscoder.cpp  GMSKTranscoder.cpp  LDPCEncoder.cpp  OQPSKTranscoder.cpp  Synchronizer.cpp  filter.cpp  fm.cpp  gmsk.cpp  main.cpp  oqpsk.cpp
src/Platform/x86/: fft.cpp
test/: README.md  acqPlot.py  bchTest.cpp  channelTest.cpp  channelTest.py  convolutionalTest.cpp  float_vs_double.ipynb  gmskTest.cpp  iqPlot.py  ldpcTest.cpp  oqpskTest.cpp  oqpskTest.py  packetizeIQ.cpp  syncTest.cpp
test/iofiles/: acq.txt  acqRandom.txt  ber.txt  double_inphase_quadrature_output_gmsk_modulate.txt  float_inphase_quadrature_output_gmsk_modulate.txt  freqShiftedSignal.txt  gmskSignal.txt  gmsk_double_x86_output.txt  gmsk_float_x86_output.txt  gmsk_input_2048.txt  iqFileGMSK.txt  iqOQPSKrand.txt  iqOQPSKrep.txt  phaseShiftedSignal.txt  wgnSignal.txt
